crates/weaveffi-cli/tests/snapshots/ruby_shapes__README_md.snap
---
source: crates/weaveffi-cli/tests/snapshots.rs
---
<!-- Generated by WeaveFFI [VERSION] from api.yml -->
<!-- DO NOT EDIT. Your changes will be overwritten. -->
<!-- To regenerate: weaveffi generate api.yml -o <out> -->

# shapes (Ruby)

Ruby bindings for `shapes` using the [ffi](https://github.com/ffi/ffi) gem.

## Prerequisites

- Ruby 2.7 or newer
- The native library (`libshapes.so`, `libshapes.dylib`, or `shapes.dll`) on the library
  search path, or its path in the `SHAPES_LIBRARY` environment variable.

## Install

```bash
gem build shapes.gemspec
gem install shapes-0.1.0.gem
```

## Usage

```ruby
require 'shapes'

Shapes::ABI_VERSION
```

<!-- END README.md -->
