crates/weaveffi-cli/tests/snapshots/ruby_shapes__lib_shapes_rb.snap
---
source: crates/weaveffi-cli/tests/snapshots.rs
---
# Generated by WeaveFFI [VERSION]
# DO NOT EDIT. Your changes will be overwritten.
# To regenerate: weaveffi generate

# frozen_string_literal: true

require_relative 'shapes/runtime'

# Ruby bindings for shapes.
module Shapes
  # The declarations these bindings were generated with, per top-level
  # module, as [id, hash, path]. Loading fails, naming the path, unless
  # the library's contract table holds each one with an equal hash.
  _wv_check_contract!(
    shapes_shapes_contract: [
      [0x0d7b3eec49243e7a, 0x5f232311808e1b1f, 'shapes.Channel'],
      [0x183fa8198100860e, 0xe40c6993cb31d359, 'shapes.describe'],
      [0x2d1395eb837b848e, 0x42202a0c12f3a16e, 'shapes.sum_bytes'],
      [0x7f9a5b87ba09b86b, 0xc5b32fb0efbbaa17, 'shapes.scale'],
      [0xc8edd779240fda17, 0x68e1be78fddb20e4, 'shapes.Numerics'],
      [0xd3d3881b2fd18a62, 0xf24d0eb76a99d918, 'shapes.make_numerics'],
      [0xf010844afff5ac3c, 0x50de28ae9b41ff15, 'shapes.Shape'],
    ],
  )

  # === Module: shapes ===

  # An algebraic shape (sum type with associated data)
  class Shape
    # The active variant's integer tag.
    def tag
      self.class::TAG
    end

    # The empty shape (a unit variant)
    class Empty < Shape
      TAG = 0

      # Structural equality over every field.
      def ==(other)
        other.is_a?(Empty)
      end
    end

    # A circle with a radius
    class Circle < Shape
      TAG = 1

      # Radius in points
      attr_reader :radius

      def initialize(radius:)
        @radius = radius
      end

      # Structural equality over every field.
      def ==(other)
        other.is_a?(Circle) &&
          radius == other.radius
      end
    end

    # An axis-aligned rectangle
    class Rectangle < Shape
      TAG = 2

      attr_reader :width

      attr_reader :height

      def initialize(width:, height:)
        @width = width
        @height = height
      end

      # Structural equality over every field.
      def ==(other)
        other.is_a?(Rectangle) &&
          width == other.width &&
          height == other.height
      end
    end

    # An integer-bounded shape (exercises narrow + wide ints)
    class Bounded < Shape
      TAG = 3

      attr_reader :min

      attr_reader :max

      attr_reader :weight

      def initialize(min:, max:, weight:)
        @min = min
        @max = max
        @weight = weight
      end

      # Structural equality over every field.
      def ==(other)
        other.is_a?(Bounded) &&
          min == other.min &&
          max == other.max &&
          weight == other.weight
      end
    end

    # A labeled shape with a small count
    class Labeled < Shape
      TAG = 4

      attr_reader :label

      attr_reader :count

      def initialize(label:, count:)
        @label = label
        @count = count
      end

      # Structural equality over every field.
      def ==(other)
        other.is_a?(Labeled) &&
          label == other.label &&
          count == other.count
      end
    end
  end

  # A plain C-style enum (no payloads)
  module Channel
    RED = 0
    GREEN = 1
    BLUE = 2
  end

  # One field per supported numeric primitive
  class Numerics
    attr_reader :a

    attr_reader :b

    attr_reader :c

    attr_reader :d

    attr_reader :e

    attr_reader :f

    attr_reader :g

    attr_reader :h

    attr_reader :i

    attr_reader :j

    def initialize(a:, b:, c:, d:, e:, f:, g:, h:, i:, j:)
      @a = a
      @b = b
      @c = c
      @d = d
      @e = e
      @f = f
      @g = g
      @h = h
      @i = i
      @j = j
    end

    # Structural equality over every field.
    def ==(other)
      other.is_a?(Numerics) &&
        a == other.a &&
        b == other.b &&
        c == other.c &&
        d == other.d &&
        e == other.e &&
        f == other.f &&
        g == other.g &&
        h == other.h &&
        i == other.i &&
        j == other.j
    end
  end

  # @api private
  # Packs a Numerics into the value-buffer wire format.
  def self._wv_write_numerics(w, v)
    w.write_i8(v.a)
    w.write_i16(v.b)
    w.write_i32(v.c)
    w.write_i64(v.d)
    w.write_u8(v.e)
    w.write_u16(v.f)
    w.write_u32(v.g)
    w.write_u64(v.h)
    w.write_f32(v.i)
    w.write_f64(v.j)
  end

  # @api private
  # Unpacks a Numerics from the value-buffer wire format.
  def self._wv_read_numerics(r)
    Numerics.new(
      a: r.read_i8,
      b: r.read_i16,
      c: r.read_i32,
      d: r.read_i64,
      e: r.read_u8,
      f: r.read_u16,
      g: r.read_u32,
      h: r.read_u64,
      i: r.read_f32,
      j: r.read_f64,
    )
  end

  # @api private
  # Packs a Shape into the value-buffer wire format.
  def self._wv_write_shape(w, v)
    case v
    when Shape::Empty
      w.write_i32(0)
    when Shape::Circle
      w.write_i32(1)
      w.write_f64(v.radius)
    when Shape::Rectangle
      w.write_i32(2)
      w.write_f32(v.width)
      w.write_f32(v.height)
    when Shape::Bounded
      w.write_i32(3)
      w.write_i16(v.min)
      w.write_i16(v.max)
      w.write_u64(v.weight)
    when Shape::Labeled
      w.write_i32(4)
      w.write_string(v.label)
      w.write_u8(v.count)
    else
      raise TypeError, "expected a Shape, got #{v.class}"
    end
  end

  # @api private
  # Unpacks a Shape from the value-buffer wire format.
  def self._wv_read_shape(r)
    tag = r.read_i32
    case tag
    when 0
      Shape::Empty.new
    when 1
      Shape::Circle.new(radius: r.read_f64)
    when 2
      Shape::Rectangle.new(width: r.read_f32, height: r.read_f32)
    when 3
      Shape::Bounded.new(min: r.read_i16, max: r.read_i16, weight: r.read_u64)
    when 4
      Shape::Labeled.new(label: r.read_string, count: r.read_u8)
    else
      raise _wv_malformed("unknown Shape tag #{tag}")
    end
  end

  attach_function :shapes_shapes_describe, [:pointer, :size_t, :pointer, :pointer], :pointer, blocking: true
  attach_function :shapes_shapes_scale, [:pointer, :size_t, :double, :pointer, :pointer], :pointer, blocking: true
  attach_function :shapes_shapes_sum_bytes, [:pointer, :size_t, :pointer], :uint64, blocking: true
  attach_function :shapes_shapes_make_numerics, [:int8, :int16, :int32, :int64, :uint8, :uint16, :uint32, :uint64, :float, :double, :pointer, :pointer], :pointer, blocking: true

  # Render a shape to a string
  # @return [String]
  def self.describe(shape)
    shape_s = _wv_encode { |w| _wv_write_shape(w, shape) }
    err = ErrorStruct.new
    out_len = FFI::MemoryPointer.new(:size_t)
    result = shapes_shapes_describe(shape_s, shape_s.bytesize, out_len, err)
    _wv_check!(err)
    _wv_take_string(result, out_len.read(:size_t))
  end

  # Scale a shape by a factor, returning a new shape
  # @return [Shape]
  def self.scale(shape, factor)
    shape_s = _wv_encode { |w| _wv_write_shape(w, shape) }
    err = ErrorStruct.new
    out_len = FFI::MemoryPointer.new(:size_t)
    result = shapes_shapes_scale(shape_s, shape_s.bytesize, factor, out_len, err)
    _wv_check!(err)
    _wv_decode(result, out_len.read(:size_t)) { |r| _wv_read_shape(r) }
  end

  # Sum a list of bytes into a wide integer (numerics smoke)
  # @return [Integer]
  def self.sum_bytes(values)
    values_s = _wv_bytes(values)
    err = ErrorStruct.new
    result = shapes_shapes_sum_bytes(values_s, values_s.bytesize, err)
    _wv_check!(err)
    result
  end

  # Build a Numerics struct from every numeric primitive
  # @return [Numerics]
  def self.make_numerics(a, b, c, d, e, f, g, h, i, j)
    err = ErrorStruct.new
    out_len = FFI::MemoryPointer.new(:size_t)
    result = shapes_shapes_make_numerics(a, b, c, d, e, f, g, h, i, j, out_len, err)
    _wv_check!(err)
    _wv_decode(result, out_len.read(:size_t)) { |r| _wv_read_numerics(r) }
  end
end

# END shapes.rb
