crates/weaveffi-cli/tests/snapshots/ruby_shapes__lib_weaveffi_rb.snap
---
source: crates/weaveffi-cli/tests/snapshots.rs
---
# Generated by WeaveFFI [VERSION] from weaveffi.yml
# DO NOT EDIT. Your changes will be overwritten.
# To regenerate: weaveffi generate weaveffi.yml -o <out>

# frozen_string_literal: true
# WeaveFFI Ruby FFI bindings (auto-generated)

require 'ffi'

module WeaveFFI
  extend FFI::Library

  # An explicit path in WEAVEFFI_LIBRARY wins, so callers can point at a
  # specific build artifact regardless of its file name or location.
  _wv_override = ENV['WEAVEFFI_LIBRARY']
  if _wv_override && !_wv_override.empty?
    ffi_lib _wv_override
  else
    case FFI::Platform::OS
    when /darwin/
      ffi_lib 'libweaveffi.dylib'
    when /mswin|mingw/
      ffi_lib 'weaveffi.dll'
    else
      ffi_lib 'libweaveffi.so'
    end
  end

  class ErrorStruct < FFI::Struct
    layout :code, :int32,
           :message, :pointer,
           :payload_ptr, :pointer,
           :payload_len, :size_t
  end

  class Error < StandardError
    attr_reader :code

    def initialize(code, message)
      @code = code
      super(message)
    end
  end

  # @api private
  # Appends values in the WeaveFFI value-buffer wire format: little-endian,
  # packed, no alignment.
  class WvBufferWriter
    def initialize
      @buf = +''.b
    end

    # The encoded bytes as a binary String.
    def data
      @buf
    end

    def write_bool(v)
      @buf << (v ? "\x01".b : "\x00".b)
    end

    def write_flag(v)
      write_bool(v)
    end

    def write_i8(v)
      @buf << [v].pack('c')
    end

    def write_u8(v)
      @buf << [v].pack('C')
    end

    def write_i16(v)
      @buf << [v].pack('s<')
    end

    def write_u16(v)
      @buf << [v].pack('S<')
    end

    def write_i32(v)
      @buf << [v].pack('l<')
    end

    def write_u32(v)
      @buf << [v].pack('L<')
    end

    def write_len(v)
      write_u32(v)
    end

    def write_i64(v)
      @buf << [v].pack('q<')
    end

    def write_u64(v)
      @buf << [v].pack('Q<')
    end

    def write_f32(v)
      @buf << [v].pack('e')
    end

    def write_f64(v)
      @buf << [v].pack('E')
    end

    def write_string(v)
      b = v.to_s.encode(Encoding::UTF_8).b
      write_u32(b.bytesize)
      @buf << b
    end

    def write_bytes(v)
      b = v.to_s.b
      write_u32(b.bytesize)
      @buf << b
    end
  end

  # @api private
  # Reads values in the WeaveFFI value-buffer wire format, raising Error on
  # any malformed buffer.
  class WvBufferReader
    def initialize(data)
      @data = data.to_s.b
      @pos = 0
    end

    def take(n, what)
      raise Error.new(-1, "malformed value buffer: #{what}") if @pos + n > @data.bytesize
      s = @data.byteslice(@pos, n)
      @pos += n
      s
    end

    def read_bool
      b = take(1, 'bool').unpack1('C')
      raise Error.new(-1, 'malformed value buffer: bool byte out of range') if b > 1
      b == 1
    end

    def read_flag
      b = take(1, 'option flag').unpack1('C')
      raise Error.new(-1, 'malformed value buffer: option flag out of range') if b > 1
      b == 1
    end

    def read_i8
      take(1, 'i8').unpack1('c')
    end

    def read_u8
      take(1, 'u8').unpack1('C')
    end

    def read_i16
      take(2, 'i16').unpack1('s<')
    end

    def read_u16
      take(2, 'u16').unpack1('S<')
    end

    def read_i32
      take(4, 'i32').unpack1('l<')
    end

    def read_u32
      take(4, 'u32').unpack1('L<')
    end

    def read_len
      len = read_u32
      if len > @data.bytesize - @pos
        raise Error.new(-1, 'malformed value buffer: length prefix exceeds remaining bytes')
      end
      len
    end

    def read_i64
      take(8, 'i64').unpack1('q<')
    end

    def read_u64
      take(8, 'u64').unpack1('Q<')
    end

    def read_f32
      take(4, 'f32').unpack1('e')
    end

    def read_f64
      take(8, 'f64').unpack1('E')
    end

    def read_string
      s = take(read_len, 'string bytes').force_encoding(Encoding::UTF_8)
      raise Error.new(-1, 'malformed value buffer: string is not valid UTF-8') unless s.valid_encoding?
      s
    end

    def read_bytes
      take(read_len, 'byte buffer')
    end

    def expect_end!
      return if @pos == @data.bytesize
      raise Error.new(-1, 'malformed value buffer: trailing bytes after value')
    end
  end

  attach_function :weaveffi_error_clear, [:pointer], :void
  attach_function :weaveffi_error_free, [:pointer], :void
  attach_function :weaveffi_free_string, [:pointer], :void
  attach_function :weaveffi_free_bytes, [:pointer, :size_t], :void

  def self.check_error!(err)
    return if err[:code].zero?
    code = err[:code]
    msg_ptr = err[:message]
    msg = msg_ptr.null? ? '' : msg_ptr.read_string
    weaveffi_error_clear(err.to_ptr)
    raise Error.new(code, msg)
  end

  # === Module: shapes ===

  # An algebraic shape (sum type with associated data)
  class Shape
    # The active variant's integer tag.
    def tag
      self.class::TAG
    end

    # The empty shape (a unit variant)
    class Empty < Shape
      TAG = 0

      # Structural equality over the variant and its fields.
      def ==(other)
        return false unless other.is_a?(Empty)
        true
      end
    end

    # A circle with a radius
    class Circle < Shape
      TAG = 1

      # Radius in points
      attr_reader :radius

      def initialize(radius:)
        @radius = radius
      end

      # Structural equality over the variant and its fields.
      def ==(other)
        return false unless other.is_a?(Circle)
        return false unless radius == other.radius
        true
      end
    end

    # An axis-aligned rectangle
    class Rectangle < Shape
      TAG = 2

      attr_reader :width

      attr_reader :height

      def initialize(width:, height:)
        @width = width
        @height = height
      end

      # Structural equality over the variant and its fields.
      def ==(other)
        return false unless other.is_a?(Rectangle)
        return false unless width == other.width
        return false unless height == other.height
        true
      end
    end

    # An integer-bounded shape (exercises narrow + wide ints)
    class Bounded < Shape
      TAG = 3

      attr_reader :min

      attr_reader :max

      attr_reader :weight

      def initialize(min:, max:, weight:)
        @min = min
        @max = max
        @weight = weight
      end

      # Structural equality over the variant and its fields.
      def ==(other)
        return false unless other.is_a?(Bounded)
        return false unless min == other.min
        return false unless max == other.max
        return false unless weight == other.weight
        true
      end
    end

    # A labeled shape with a small count
    class Labeled < Shape
      TAG = 4

      attr_reader :label

      attr_reader :count

      def initialize(label:, count:)
        @label = label
        @count = count
      end

      # Structural equality over the variant and its fields.
      def ==(other)
        return false unless other.is_a?(Labeled)
        return false unless label == other.label
        return false unless count == other.count
        true
      end
    end
  end

  # A plain C-style enum (no payloads)
  module Channel
    RED = 0
    GREEN = 1
    BLUE = 2
  end

  # One field per supported numeric primitive
  class Numerics
    attr_reader :a

    attr_reader :b

    attr_reader :c

    attr_reader :d

    attr_reader :e

    attr_reader :f

    attr_reader :g

    attr_reader :h

    attr_reader :i

    attr_reader :j

    def initialize(a:, b:, c:, d:, e:, f:, g:, h:, i:, j:)
      @a = a
      @b = b
      @c = c
      @d = d
      @e = e
      @f = f
      @g = g
      @h = h
      @i = i
      @j = j
    end

    # Structural equality over every field.
    def ==(other)
      return false unless other.is_a?(Numerics)
      return false unless a == other.a
      return false unless b == other.b
      return false unless c == other.c
      return false unless d == other.d
      return false unless e == other.e
      return false unless f == other.f
      return false unless g == other.g
      return false unless h == other.h
      return false unless i == other.i
      return false unless j == other.j
      true
    end
  end

  # @api private
  # Packs a Numerics into the value-buffer wire format.
  def self._wv_write_numerics(w, v)
    w.write_i8(v.a)
    w.write_i16(v.b)
    w.write_i32(v.c)
    w.write_i64(v.d)
    w.write_u8(v.e)
    w.write_u16(v.f)
    w.write_u32(v.g)
    w.write_u64(v.h)
    w.write_f32(v.i)
    w.write_f64(v.j)
  end

  # @api private
  # Unpacks a Numerics from the value-buffer wire format.
  def self._wv_read_numerics(r)
    _wv_a = r.read_i8
    _wv_b = r.read_i16
    _wv_c = r.read_i32
    _wv_d = r.read_i64
    _wv_e = r.read_u8
    _wv_f = r.read_u16
    _wv_g = r.read_u32
    _wv_h = r.read_u64
    _wv_i = r.read_f32
    _wv_j = r.read_f64
    Numerics.new(a: _wv_a, b: _wv_b, c: _wv_c, d: _wv_d, e: _wv_e, f: _wv_f, g: _wv_g, h: _wv_h, i: _wv_i, j: _wv_j)
  end

  # @api private
  # Packs a Shape into the value-buffer wire format.
  def self._wv_write_shape(w, v)
    case v
    when Shape::Empty
      w.write_i32(0)
    when Shape::Circle
      w.write_i32(1)
      w.write_f64(v.radius)
    when Shape::Rectangle
      w.write_i32(2)
      w.write_f32(v.width)
      w.write_f32(v.height)
    when Shape::Bounded
      w.write_i32(3)
      w.write_i16(v.min)
      w.write_i16(v.max)
      w.write_u64(v.weight)
    when Shape::Labeled
      w.write_i32(4)
      w.write_string(v.label)
      w.write_u8(v.count)
    else
      raise Error.new(-1, 'unknown Shape variant')
    end
  end

  # @api private
  # Unpacks a Shape from the value-buffer wire format.
  def self._wv_read_shape(r)
    tag = r.read_i32
    case tag
    when 0
      Shape::Empty.new
    when 1
      _wv_radius = r.read_f64
      Shape::Circle.new(radius: _wv_radius)
    when 2
      _wv_width = r.read_f32
      _wv_height = r.read_f32
      Shape::Rectangle.new(width: _wv_width, height: _wv_height)
    when 3
      _wv_min = r.read_i16
      _wv_max = r.read_i16
      _wv_weight = r.read_u64
      Shape::Bounded.new(min: _wv_min, max: _wv_max, weight: _wv_weight)
    when 4
      _wv_label = r.read_string
      _wv_count = r.read_u8
      Shape::Labeled.new(label: _wv_label, count: _wv_count)
    else
      raise Error.new(-1, "malformed value buffer: unknown Shape tag #{tag}")
    end
  end
  # Render a shape to a string
  attach_function :weaveffi_shapes_describe, [:pointer, :size_t, :pointer], :pointer
  # Scale a shape by a factor, returning a new shape
  attach_function :weaveffi_shapes_scale, [:pointer, :size_t, :double, :pointer, :pointer], :pointer
  # Sum a list of bytes into a wide integer (numerics smoke)
  attach_function :weaveffi_shapes_sum_bytes, [:pointer, :size_t, :pointer], :uint64
  # Build a Numerics struct from every numeric primitive
  attach_function :weaveffi_shapes_make_numerics, [:int8, :int16, :int32, :int64, :uint8, :uint16, :uint32, :uint64, :float, :double, :pointer, :pointer], :pointer

  # Render a shape to a string
  def self.describe(shape)
    err = ErrorStruct.new
    shape_w = WvBufferWriter.new
    _wv_write_shape(shape_w, shape)
    shape_data = shape_w.data
    shape_buf = FFI::MemoryPointer.new(:uint8, shape_data.bytesize)
    shape_buf.put_bytes(0, shape_data)
    result = weaveffi_shapes_describe(shape_buf, shape_data.bytesize, err)
    check_error!(err)
    return '' if result.null?
    str = result.read_string
    weaveffi_free_string(result)
    str
  end

  # Scale a shape by a factor, returning a new shape
  def self.scale(shape, factor)
    err = ErrorStruct.new
    shape_w = WvBufferWriter.new
    _wv_write_shape(shape_w, shape)
    shape_data = shape_w.data
    shape_buf = FFI::MemoryPointer.new(:uint8, shape_data.bytesize)
    shape_buf.put_bytes(0, shape_data)
    out_len = FFI::MemoryPointer.new(:size_t)
    result = weaveffi_shapes_scale(shape_buf, shape_data.bytesize, factor, out_len, err)
    check_error!(err)
    len = out_len.read(:size_t)
    data = result.null? ? ''.b : result.read_string(len)
    weaveffi_free_bytes(result, len) unless result.null?
    _wv_r = WvBufferReader.new(data)
    _wv_value = _wv_read_shape(_wv_r)
    _wv_r.expect_end!
    _wv_value
  end

  # Sum a list of bytes into a wide integer (numerics smoke)
  def self.sum_bytes(values)
    err = ErrorStruct.new
    values_buf = FFI::MemoryPointer.new(:uint8, values.bytesize)
    values_buf.put_bytes(0, values)
    result = weaveffi_shapes_sum_bytes(values_buf, values.bytesize, err)
    check_error!(err)
    result
  end

  # Build a Numerics struct from every numeric primitive
  def self.make_numerics(a, b, c, d, e, f, g, h, i, j)
    err = ErrorStruct.new
    out_len = FFI::MemoryPointer.new(:size_t)
    result = weaveffi_shapes_make_numerics(a, b, c, d, e, f, g, h, i, j, out_len, err)
    check_error!(err)
    len = out_len.read(:size_t)
    data = result.null? ? ''.b : result.read_string(len)
    weaveffi_free_bytes(result, len) unless result.null?
    _wv_r = WvBufferReader.new(data)
    _wv_value = _wv_read_numerics(_wv_r)
    _wv_r.expect_end!
    _wv_value
  end
end

# END weaveffi.rb
